--- a/style.css
+++ b/style.css
@@ -1,49 +1,84 @@
 * {
   box-sizing: border-box;
-  position: relative;
   margin: 0;
   padding: 0;
+  position: relative;
 }
 
 :root {
-  --root-padding: 0.75rem;
+  --highlight-color: #e33d26;
+  --root-padding: 0.5rem;
+  font: 200%/1.333 "Neue Haas Unica Pro", "Helvetica Neue", sans-serif;
+  font-feature-settings: "pnum" 1;
+  padding: var(--root-padding) calc(var(--root-padding) * 2);
 }
 
-html {
-  font: 100%/1.5 "Helvetica Neue", sans-serif;
-  padding: var(--root-padding);
+@media (max-width: 920px) {
+  :root {
+    font-size: 125%;
+  }
+}
+
+@media (max-width: 570px) {
+  :root {
+    font-size: 100%;
+  }
+
+  p {
+    letter-spacing: 0;
+  }
+}
+
+h1 {
+  font-size: 1rem;
+}
+
+p {
+  letter-spacing: -0.0125em;
+  margin-bottom: 1.5rem;
+}
+
+a {
+  color: inherit;
+  -webkit-text-decoration-skip: ink;
+  text-decoration-skip: ink;
+  text-decoration: underline;
+}
+
+a:hover {
+  color: var(--highlight-color);
+}
+
+ol {
+  padding-left: 1.5rem;
 }
 
 .title {
-  text-transform: uppercase;
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
+  justify-content: space-between;
   line-height: 1;
   margin-bottom: var(--root-padding);
+  text-transform: uppercase;
   will-change: transform;
 }
 
-.title-image,
-.title-image img {
+.title-image {
   flex: 1 0 100%;
 }
 
 img {
+  line-height: 1;
   max-width: 100%;
 }
 
 .grid {
   display: grid;
+  grid-auto-flow: dense;
   grid-gap: var(--root-padding);
   grid-template-columns: repeat(2, 1fr);
-  grid-auto-flow: dense;
 }
 
 .grid__item {
   grid-column: 1 / 3;
 }
-
-/* .grid__item--portrait {
-  grid-column: 1 / 2;
-} */
